[package]
name = "kola"
version = "0.1.0"
description = "Fast and lightweight language server for Kotlin"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/fwcd/kola"
keywords = ["kotlin", "lsp", "ide"]
categories = ["compilers", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
