[package]
name = "kola"
version = "0.1.1"
description = "Fast and lightweight language server for Kotlin"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/fwcd/kola"
keywords = ["kotlin", "lsp", "ide"]
categories = ["compilers", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
comemo = "0.4.0"
dashmap = "5.5.3"
ropey = "1.6.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
tracing = "0.1.40"
tree-sitter = "0.22.6"
tree-sitter-kotlin = "0.3.6"
